--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: #222;
 }
@@ -64,4 +68,36 @@ div.post p.info a.author {
 div.post p.summary {
   margin: 10px 0;
   line-height: 1.4rem;
+}
+
+form.login,
+form.register {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+input {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px 10px;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+button {
+  width: 100%;
+  display: block;
+  background-color: green;
+  font-weight: bold;
+  border: none;
+  padding: 10px;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+form h1 {
+  text-align: center;
 }
